#133 unittest profile の時には devtools が無効になるようにしました

--- a/src/main/resources/application-unittest.properties
+++ b/src/main/resources/application-unittest.properties
@@ -1,3 +1,3 @@
-spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
+spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration, org.springframework.boot.devtools.autoconfigure.LocalDevToolsAutoConfiguration, org.springframework.boot.devtools.autoconfigure.RemoteDevToolsAutoConfiguration, org.springframework.boot.devtools.autoconfigure.DevToolsDataSourceAutoConfiguration
 
 logging.level.root=OFF
