#133 メトリックスの application label を application.properties の management.metrics.tags.application で定義するよう変更しました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ host.ip.address=172.31.16.1
 doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
 management.endpoints.web.exposure.include=health,info,loggers,prometheus
+management.metrics.tags.application=lending
 
 #spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/ksbylending
