--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -1,3 +1,4 @@
+# docker-compose -f docker-compose.app.yml --compatibility build --no-cache
 # docker-compose -f docker-compose.app.yml --compatibility up -d
 # docker-compose -f docker-compose.app.yml --compatibility down
 version: '3'
