--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ plugins {
     id "com.gorylenko.gradle-git-properties" version "2.0.0"
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
-    gradleVersion = "5.2.1"
+    gradleVersion = "5.3.1"
     distributionType = Wrapper.DistributionType.ALL
 }
 
