--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
-    gradleVersion = "5.3.1"
+    gradleVersion = "5.6.4"
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -40,10 +40,16 @@ tasks.named("compileTestJava").configure {
 }
 
 // for Doma 2
-// JavaクラスとSQLファイルの出力先ディレクトリを同じにする
-processResources.destinationDir = compileJava.destinationDir
-// コンパイルより前にSQLファイルを出力先ディレクトリにコピーするために依存関係を逆転する
-compileJava.dependsOn processResources
+// Copy the resources referred by the Doma annotation processors to
+// the destinationDir of the compileJava task
+task copyDomaResources(type: Sync)  {
+    from sourceSets.main.resources.srcDirs
+    into compileJava.destinationDir
+    include "doma.compile.config"
+    include "META-INF/**/*.sql"
+    include "META-INF/**/*.script"
+}
+compileJava.dependsOn copyDomaResources
 
 springBoot {
     buildInfo()
@@ -91,16 +97,6 @@ pmd {
     consoleOutput = true
     ruleSetFiles = rootProject.files("/config/pmd/pmd-project-rulesets.xml")
     ruleSets = []
-}
-pmdMain {
-    def backupLoggerLevel
-    doFirst {
-        backupLoggerLevel = logger.context.level
-        logger.context.level = LogLevel.QUIET
-    }
-    doLast {
-        logger.context.level = backupLoggerLevel
-    }
 }
 
 repositories {
