--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "2.1.11-RELEASE"
+        version "2.2.2-RELEASE"
     }
     repositories {
         mavenCentral()
@@ -14,14 +14,14 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.1.11.RELEASE"
+    id "org.springframework.boot" version "2.2.2.RELEASE"
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
     id "groovy"
     id "checkstyle"
 //    id "com.github.spotbugs" version "1.6.9"
     id "pmd"
     id "net.ltgt.errorprone" version "0.7.1"
-    id "com.gorylenko.gradle-git-properties" version "2.0.0"
+    id "com.gorylenko.gradle-git-properties" version "2.2.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -62,6 +62,10 @@ idea {
 }
 
 configurations {
+    developmentOnly
+    runtimeClasspath.extendsFrom developmentOnly
+    compileOnly.extendsFrom annotationProcessor
+
     // annotationProcessor と testAnnotationProcessor、compileOnly と testCompileOnly を併記不要にする
     testAnnotationProcessor.extendsFrom annotationProcessor
     testImplementation.extendsFrom compileOnly
@@ -105,24 +109,24 @@ repositories {
 dependencyManagement {
     imports {
         // mavenBom は以下の URL のものを使用する
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.1.11.RELEASE/
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.2.2.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
-        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.1.11.RELEASE/spring-boot-dependencies-2.1.11.RELEASE.pom
+        // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.2.2.RELEASE/spring-boot-dependencies-2.2.2.RELEASE.pom
         mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES) {
             // Spring Boot の BOM に定義されているバージョンから変更する場合には、ここに以下のように記述する
             // bomProperty "thymeleaf.version", "3.0.9.RELEASE"
         }
-        mavenBom("org.junit:junit-bom:5.4.1")
+        mavenBom("org.junit:junit-bom:5.5.2")
     }
 }
 
 dependencies {
-    def jdbcDriver = "org.postgresql:postgresql:42.2.5"
+    def jdbcDriver = "org.postgresql:postgresql:42.2.9"
     def spockVersion = "1.3-groovy-2.5"
-    def domaVersion = "2.24.0"
-    def lombokVersion = "1.18.6"
+    def domaVersion = "2.26.0"
+    def lombokVersion = "1.18.10"
     def errorproneVersion = "2.3.3"
-    def powermockVersion = "2.0.0"
+    def powermockVersion = "2.0.4"
 //    def spotbugsVersion = "3.1.11"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
@@ -137,7 +141,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-redis")
     implementation("org.springframework.boot:spring-boot-starter-amqp")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
-    runtimeOnly("org.springframework.boot:spring-boot-devtools")
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
     compileOnly("org.springframework.boot:spring-boot-configuration-processor")
     implementation("org.springframework.session:spring-session-data-redis")
     implementation("org.springframework.retry:spring-retry")
@@ -145,23 +149,25 @@ dependencies {
     implementation("org.apache.commons:commons-lang3")
     implementation("org.codehaus.janino:janino")
     implementation("io.micrometer:micrometer-registry-prometheus")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+    }
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     runtimeOnly("${jdbcDriver}")
-    implementation("com.integralblue:log4jdbc-spring-boot-starter:1.0.2")
+    implementation("com.integralblue:log4jdbc-spring-boot-starter:2.0.0")
     implementation("org.simpleframework:simple-xml:2.7.1")
-    implementation("com.univocity:univocity-parsers:2.8.1")
-    implementation("com.google.guava:guava:27.1-jre")
-    implementation("org.flywaydb:flyway-core:5.2.4")
+    implementation("com.univocity:univocity-parsers:2.8.4")
+    implementation("com.google.guava:guava:28.1-jre")
+    implementation("org.flywaydb:flyway-core:6.1.3")
     testImplementation("org.dbunit:dbunit:2.6.0")
-    testImplementation("com.icegreen:greenmail:1.5.10")
-    testImplementation("org.assertj:assertj-core:3.12.2")
+    testImplementation("com.icegreen:greenmail:1.5.11")
+    testImplementation("org.assertj:assertj-core:3.14.0")
     testImplementation("com.jayway.jsonpath:json-path:2.4.0")
-    testImplementation("org.jsoup:jsoup:1.11.3")
-    testImplementation("cglib:cglib-nodep:3.2.10")
+    testImplementation("org.jsoup:jsoup:1.12.1")
+    testImplementation("cglib:cglib-nodep:3.3.0")
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
 
