#134 設定項目を logging.file → logging.file.name に変更し、以前のバージョンアップで不要になっていた slowquery.logging.file をさ駆除しました

--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,6 +1,5 @@
 server.tomcat.basedir=D:/webapps/ksbysample-webapp-lending
-logging.file=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
-slowquery.logging.file=${server.tomcat.basedir}/logs/slow-query.log
+logging.file.name=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
 
 spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 
