--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
     id "groovy"
     id "checkstyle"
-//    id "com.github.spotbugs" version "1.6.9"
+    id "com.github.spotbugs" version "3.0.0"
     id "pmd"
     id "net.ltgt.errorprone" version "1.1.1"
     id "com.gorylenko.gradle-git-properties" version "2.2.0"
@@ -72,6 +72,9 @@ configurations {
 
     // for Doma 2
     domaGenRuntime
+
+    // for SpotBugs
+    spotbugsStylesheets { transitive = false }
 }
 
 checkstyle {
@@ -80,18 +83,19 @@ checkstyle {
     sourceSets = [project.sourceSets.main]
 }
 
-//spotbugs {
-//    toolVersion = "3.1.11"
-//    ignoreFailures = true
-//    effort = "max"
-//    spotbugsTest.enabled = false
-//}
-//tasks.withType(com.github.spotbugs.SpotBugsTask) {
-//    reports {
-//        xml.enabled = false
-//        html.enabled = true
-//    }
-//}
+spotbugs {
+    toolVersion = "4.0.0-beta4"
+    ignoreFailures = true
+    effort = "max"
+    spotbugsTest.enabled = false
+}
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+        html.stylesheet = resources.text.fromArchiveEntry(configurations.spotbugsStylesheets, "color.xsl")
+    }
+}
 
 pmd {
     toolVersion = "6.20.0"
@@ -127,7 +131,7 @@ dependencies {
     def lombokVersion = "1.18.10"
     def errorproneVersion = "2.3.4"
     def powermockVersion = "2.0.4"
-//    def spotbugsVersion = "3.1.11"
+    def spotbugsVersion = "4.0.0-beta4"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-dependency-versions.html ) 参照
@@ -196,10 +200,11 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for SpotBugs
-//    compileOnly("com.github.spotbugs:spotbugs:${spotbugsVersion}")
-//    compileOnly("net.jcip:jcip-annotations:1.0")
-//    compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
-//    testImplementation("com.google.code.findbugs:jsr305:3.0.2")
+    compileOnly("com.github.spotbugs:spotbugs:${spotbugsVersion}")
+    compileOnly("net.jcip:jcip-annotations:1.0")
+    compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
+    testImplementation("com.google.code.findbugs:jsr305:3.0.2")
+    spotbugsStylesheets("com.github.spotbugs:spotbugs:${spotbugsVersion}")
 }
 
 def jvmArgsForTask = [
