--- a/build.gradle
+++ b/build.gradle
@@ -205,6 +205,7 @@ dependencies {
     compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
     testImplementation("com.google.code.findbugs:jsr305:3.0.2")
     spotbugsStylesheets("com.github.spotbugs:spotbugs:${spotbugsVersion}")
+    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1")
 }
 
 def jvmArgsForTask = [
