--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -22,6 +22,24 @@ scrape_configs:
   # にアクセスする。docker-compose.yml の extra_hosts に定義した PC のホスト名 app を設定する。
   - targets: ['app:8080']
 
+- job_name: 'redis_exporter_targets'
+  static_configs:
+    - targets:
+        - redis://redis-cluster-6379:6379
+        - redis://redis-cluster-6380:6379
+        - redis://redis-cluster-6381:6379
+        - redis://redis-cluster-6382:6379
+        - redis://redis-cluster-6383:6379
+        - redis://redis-cluster-6384:6379
+  metrics_path: /scrape
+  relabel_configs:
+    - source_labels: [__address__]
+      target_label: __param_target
+    - source_labels: [__param_target]
+      target_label: instance
+    - target_label: __address__
+      replacement: redis_exporter:9121
+
 - job_name: 'redis_exporter'
   static_configs:
   - targets: ['redis_exporter:9121']
