--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
 management.endpoints.web.exposure.include=health,info,loggers,prometheus
 management.metrics.tags.application=lending
+management.endpoint.health.show-details=always
 
 #spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/ksbylending
